Moving figure sources.

--- a/functionsAndRecap.tex
+++ b/functionsAndRecap.tex
@@ -536,7 +536,7 @@ title('Taylor 1');
 ylim([-1.5, 1.5]);
 \end{lstlisting}
 \columnbreak
-\includegraphics[width=\linewidth]{pic/subplot_example_1.png}
+\includegraphics[width=\linewidth]{pic/plotting/subplot_example_1.png}
 \end{multicols}
 
 The three input parameters to the \verb!subplot! command
@@ -562,7 +562,7 @@ distributed as follows:
 \begin{ex}
 Recreate the following plot: 
 \begin{center}
-\includegraphics[width=9cm]{pic/subplot_exercise_1.png}
+\includegraphics[width=9cm]{pic/plotting/subplot_exercise_1.png}
 \end{center}
 \begin{hint}
 \end{hint}
