Moving files around.

--- a/fittingModelsToData.tex
+++ b/fittingModelsToData.tex
@@ -10,7 +10,7 @@ on loading data into Matlab and fitting models to data.
 \begin{ex}
 Make the figure inserted below: \par
 \noindent
-\includegraphics[width=8cm]{pic/basic_plotting_010.png}
+\includegraphics[width=8cm]{pic/plotting/basic_plotting_010.png}
 \begin{hint}
 The commands \verb!plot!, \verb!xlim! and \verb!ylim! can be useful.
 \end{hint}
@@ -113,7 +113,7 @@ plot(data(:, 1), data(:, 2));
 \begin{ex}
 Make the figure inserted below. Pay attention to the axes labels and the width of the plotted line. The visualized function is $f(x) = x^2 - x$. \par
 \noindent
-\includegraphics[width=8cm]{pic/basic_plotting_020.png}
+\includegraphics[width=8cm]{pic/plotting/basic_plotting_020.png}
 \begin{hint}
 The commands \verb!plot!, \verb!xlabel! and \verb!ylabel! can be useful.
 \end{hint}
