More work on chapter one.

--- a/functionsinmatlab.tex
+++ b/functionsinmatlab.tex
@@ -42,6 +42,80 @@ x2 =
 
 
 
+
+\begin{ex}
+Define the two row vectors $\vec{v}$ and $\vec{u}$:
+\begin{align*}
+\vec{v} = (1, 2, 3) \qquad \vec{u} = (3, 4, 1)
+\end{align*}
+and determine their 
+sum ($\vec{v} + \vec{u}$),
+difference ($\vec{v} - \vec{u}$),
+dot product ($\vec{v} \cdot \vec{u}$) and
+cross product ($\vec{v} \times \vec{u}$).
+In addition compute the elementwise product, division, power of 2 and 
+the transposed and length of the two vectors.
+\end{ex}
+\known{[\ldots], .*, ./, .\^{}2, .', transpose}
+
+
+\begin{ex}
+Define the two matrices
+\begin{align*}
+\textrm{AMAT} = \begin{pmatrix}
+1 &2 &3	\\
+2 &4 &6	\\
+1 &2 &5
+\end{pmatrix}
+\qquad
+\textrm{BMAT} =
+\begin{pmatrix}
+1 &0 &0	\\
+2 &4 &6	\\
+2 &2 &0
+\end{pmatrix}
+\end{align*}
+And calculate their product AMAT $\cdot$ BMAT, element wise product of AMAT times BMAT, sum
+AMAT+BMAT, transposed, inverted, determinants, sizes, column and row numbers.
+\end{ex}
+\known{[,;], \^{}-1, inv, det, size}
+
+
+\begin{ex}
+Use the matrices from the previous exercise. What is the value of \verb!AMAT(5)! and why?
+\end{ex}
+
+
+\begin{ex}
+Construct an Identity Matrix $I_{5\times5}$ and a diagonal matrix
+\begin{align*}
+\textrm{CMAT} = \begin{pmatrix}
+2 &0 &0 &0 &0	\\
+0 &4 &0 &0 &0	\\
+0 &0 &7 &0 &0	\\
+0 &0 &0 &0.5 &0	\\
+0 &0 &0 &0 &1	
+\end{pmatrix}
+\end{align*}
+And calculate their product $I_{5 \times 5} \cdot \textrm{CMAT}$.
+\end{ex}
+\known{eye, diag}
+
+
+\begin{ex}
+Solve the set of linear equations
+\begin{align*}
+1	& = 5x + 2y	\\
+0	& = -x + y + 3z + 2v	\\
+-10 	& = x + 3y - 4z + v	\\
+0	& = -2x + 3z - 2v 
+\end{align*}
+\end{ex}
+\known{$\backslash$}
+
+
+
+
 \subsection{Creating functions}
 
 
